k8s/apps/kube-system-coredns/ciliumnetworkpolicy-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kube-system-coredns-egress
  namespace: kube-system
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toCIDRSet:
        - cidr: 192.168.0.1/32
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
  endpointSelector:
    matchLabels:
      k8s:k8s-app: kube-dns
